<resources>
    <string name="app_name">sabinomeals</string>
    <string name="internet_permission_title">Authorisation Internet</string>
    <string name="internet_permission_message">Please allow access to the application</string>
    <string name="internet_permission_denied">Please allow permission is required to access the application</string>
    <string name="welcome">Hello User, Welcome</string>
    <string name="info_login">Please fill in your Telephone number</string>
    <string name="contactUs_phoneNo">Phone</string>
    <string name="validate">Validate</string>
    <string name="send_code">Code was sent by sms to your mobile number</string>
    <string name="first_last">Full Name</string>
    <string name="Date_of_Birth">Date Of Birth</string>
    <string name="address">Address</string>
    <string name="Button_Submit_ContactUs">Save</string>
    <string name="info_user">Please update your profile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="popular_categories">Popular Category</string>
    <string name="popular_menu">Popular Menu</string>
    <string name="best_deals">Best Deals</string>
    <string name="menu_category">Menu</string>
    <string name="menu_food">Dishes</string>
    <string name="supplement">Supplements</string>
    <string name="size">Cut</string>
    <string name="menu_food_detail">Detail Flat</string>
    <string name="menu_cart">Basket</string>
    <string name="menu_tools">Ordered</string>
    <string name="action_clear_cart">Clear Lists</string>
    <string name="menu_logout">Please allow access to the application</string>

</resources>
